--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script: bundle install && bundle exec rspec spec/
 deploy:
   provider: rubygems
   api_key: $GEM_TOKEN
-  gem: kontena-plugin-aws
+  gem: kontena-plugin-packet
   on:
     tags: true
