--- a/lib/kontena/machine/packet/cloudinit.yml
+++ b/lib/kontena/machine/packet/cloudinit.yml
@@ -28,6 +28,16 @@ write_files:
       nameserver 8.8.4.4
 coreos:
   units:
+    - name: etcd2.service
+      command: start
+      enable: true
+      content: |
+        Description=etcd 2.0
+        After=docker.service
+        [Service]
+        Restart=always
+        RestartSec=5
+        ExecStart=/usr/bin/docker logs --tail=10 -f kontena-etcd
     - name: 10-weave.network
       runtime: false
       content: |
