--- a/lib/kontena/machine/packet/cloudinit.yml
+++ b/lib/kontena/machine/packet/cloudinit.yml
@@ -38,14 +38,12 @@ coreos:
         Restart=always
         RestartSec=5
         ExecStart=/usr/bin/docker logs --tail=10 -f kontena-etcd
-    - name: 10-weave.network
-      runtime: false
-      content: |
-        [Match]
-        Type=bridge
-        Name=weave*
-
-        [Network]
+    - name: 50-docker.network
+      mask: true
+    - name: 50-docker-veth.network
+      mask: true
+    - name: zz-default.network
+      mask: true
     - name: kontena-agent.service
       command: start
       enable: true
